# mcu-apple-bridge

./: CMakeLists.txt  CONTEXT.md  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/: settings.local.json
main/: CMakeLists.txt  event_log.c  event_log.h  http_server.c  http_server.h  idf_component.yml  log_stream.c  log_stream.h  network_setup.c  network_setup.h  usb_ncm_server.c  wifi_setup.c  wifi_setup.h
