idf_component_register(
    SRCS
        "usb_ncm_server.c"
        "network_setup.c"
        "http_server.c"
        "log_stream.c"
        "wifi_setup.c"
        "event_log.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        nvs_flash
        esp_netif
        esp_event
        esp_http_server
        esp_wifi
        mdns
        esp_timer
)
